--- a/index.html
+++ b/index.html
@@ -30,8 +30,12 @@
         I'm learning to code in Java, but can currently code html and css
             <br>            
         I'm particularly interested in Finance, Economics, Education and law. My goal is to be a serial startup founder and work within these industries. 
-        <br>
+            <br>
         I enjoy learnign about Economics, CS and Math in my school coursework!
+        <br>
+        <p>I wanna work or found a startup in silicon valley like this image below!</p>
+        <br>
+        <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.sftravel.com%2Fbeyond-sf%2Fsilicon-valley&psig=AOvVaw1BumZ9pJWvIAlYu3jn_xXP&ust=1733165500625000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCJjJneueh4oDFQAAAAAdAAAAABAE" alt="silicon valley">
         <br>
         <br>
        <b> Thanks for reading!</p></main></b> 
