--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <br>
         <p>I wanna work or found a startup in silicon valley like this image below!</p>
         <br>
-        <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.sftravel.com%2Fbeyond-sf%2Fsilicon-valley&psig=AOvVaw1BumZ9pJWvIAlYu3jn_xXP&ust=1733165500625000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCJjJneueh4oDFQAAAAAdAAAAABAE" alt="silicon valley">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTlcVPmBPePE9nsL1gdZWMrNmSU9j0PIXe3Fw&s" alt="silicon valley">
         <br>
         <br>
        <b> Thanks for reading!</p></main></b> 
